[gd_scene load_steps=4 format=3 uid="uid://d27vm1f03yylj"]

[ext_resource type="FontVariation" uid="uid://dekctvehlocm3" path="res://assets/fonts/TitleFont.tres" id="1_04y4a"]
[ext_resource type="Script" path="res://game_scenes/GameOver.gd" id="1_xf6lj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lehyc"]

[node name="GameOver" type="Node2D"]
script = ExtResource("1_xf6lj")
victory = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="CanvasLayer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
auto_translate = false
localize_numeral_system = false
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("1_04y4a")
theme_override_font_sizes/font_size = 40
text = "Game Over"
horizontal_alignment = 1
justification_flags = 131

[node name="HSeparator2" type="HSeparator" parent="CanvasLayer/CenterContainer/VBoxContainer"]
visibility_layer = 0
layout_mode = 2
theme_override_constants/separation = 20

[node name="InfoText" type="RichTextLabel" parent="CanvasLayer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
fit_content = true

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/CenterContainer/VBoxContainer"]
visibility_layer = 0
layout_mode = 2
theme_override_constants/separation = 20

[node name="SurveyButton" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Fai un breve sondaggio"

[node name="Label" type="Label" parent="CanvasLayer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Per il sondaggio, ti servir√† questo numero"
horizontal_alignment = 1

[node name="PIDLabel" type="Label" parent="CanvasLayer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
auto_translate = false
localize_numeral_system = false
horizontal_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="CanvasLayer/CenterContainer/VBoxContainer"]
visibility_layer = 0
layout_mode = 2
theme_override_constants/separation = 20

[node name="BackToTitleButton" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/disabled = SubResource("StyleBoxEmpty_lehyc")
text = "Torna all'inizio"

[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/SurveyButton" to="." method="_on_survey_button_pressed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/BackToTitleButton" to="." method="_on_back_to_title_button_pressed"]
